--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <string name="news_image_description">News Image</string>
+    <string name="share">Share </string>
+    <string name="save">Save </string>
 </resources>
