--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="news_image_description">News Image</string>
-    <string name="share">Share </string>
-    <string name="save">Save </string>
+    <string name="share">Share</string>
+    <string name="save">Save</string>
+    <string name="publish_date">Publish Date</string>
+    <string name="source">Source</string>
+    <string name="author">Author</string>
+    <string name="title_activity_news_details">NewsDetails</string>
 </resources>
